support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_missing_rtemplate.i
%module xxx


int foo(vector<int);







