support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_missing_rtemplate.stderr
cpp_missing_rtemplate.i:4: Error: Syntax error in input(1).
